--- a/nicepage.css
+++ b/nicepage.css
@@ -41522,7 +41522,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-menu-1 {
-  margin: 25px -33px 0 auto;
+  margin: 25px 0 0 auto;
 }
 
 .u-header .u-nav-1 {
