--- a/CV.css
+++ b/CV.css
@@ -1,6 +1,6 @@
  .u-section-1 {
   background-image: none;
-  min-height: 1755px;
+  min-height: 1849px;
 }
 
 .u-section-1 .u-text-1 {
@@ -225,9 +225,15 @@
   font-size: 1.125rem;
 }
 
-.u-section-1 .u-layout-wrap-5 {
-  margin-top: 108px;
+.u-section-1 .u-line-1 {
+  margin-top: 201px;
   margin-bottom: 0;
+  transform-origin: left center 0px;
+}
+
+.u-section-1 .u-layout-wrap-5 {
+  margin-top: -3px;
+  margin-bottom: 2px;
 }
 
 .u-section-1 .u-layout-cell-11 {
@@ -294,7 +300,7 @@
 
 @media (max-width: 1199px) {
    .u-section-1 {
-    min-height: 1951px;
+    min-height: 1673px;
   }
 
   .u-section-1 .u-text-1 {
@@ -386,6 +392,10 @@
     min-height: 250px;
   }
 
+  .u-section-1 .u-layout-wrap-5 {
+    margin-bottom: 0;
+  }
+
   .u-section-1 .u-layout-cell-11 {
     min-height: 86px;
   }
@@ -405,7 +415,7 @@
 
 @media (max-width: 991px) {
    .u-section-1 {
-    min-height: 2194px;
+    min-height: 2304px;
   }
 
   .u-section-1 .u-text-1 {
@@ -495,6 +505,14 @@
     min-height: 100px;
   }
 
+  .u-section-1 .u-line-1 {
+    margin-top: 199px;
+  }
+
+  .u-section-1 .u-layout-wrap-5 {
+    margin-top: -1px;
+  }
+
   .u-section-1 .u-layout-cell-11 {
     min-height: 100px;
   }
@@ -510,11 +528,15 @@
   .u-section-1 .u-layout-cell-14 {
     min-height: 100px;
   }
+
+  .u-section-1 .u-text-25 {
+    font-size: 0.625rem;
+  }
 }
 
 @media (max-width: 767px) {
    .u-section-1 {
-    min-height: 2218px;
+    min-height: 2234px;
   }
 
   .u-section-1 .u-text-1 {
@@ -680,8 +702,8 @@
     font-size: 1rem;
   }
 
-  .u-section-1 .u-layout-wrap-5 {
-    margin-top: 75px;
+  .u-section-1 .u-line-1 {
+    margin-top: 91px;
   }
 
   .u-section-1 .u-container-layout-11 {
@@ -708,7 +730,7 @@
 
 @media (max-width: 575px) {
    .u-section-1 {
-    min-height: 1780px;
+    min-height: 1792px;
   }
 
   .u-section-1 .u-text-1 {
@@ -831,12 +853,21 @@
     font-size: 0.625rem;
   }
 
+  .u-section-1 .u-line-1 {
+    margin-top: 76px;
+  }
+
   .u-section-1 .u-layout-wrap-5 {
-    margin-top: 71px;
+    margin-top: 0;
+    margin-bottom: 6px;
   }
 
   .u-section-1 .u-text-22 {
     font-size: 0.875rem;
+  }
+
+  .u-section-1 .u-layout-cell-12 {
+    min-height: 40px;
   }
 
   .u-section-1 .u-text-23 {
