--- a/Research.css
+++ b/Research.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 537px;
+  min-height: 951px;
 }
 
 .u-section-1 .u-text-1 {
@@ -20,6 +20,11 @@
 .u-section-1 .u-text-3 {
   font-size: 1.125rem;
   margin: 20px 0 0;
+}
+
+.u-section-1 .u-btn-2 {
+  background-image: none;
+  padding: 0;
 }
 
 .u-section-1 .u-text-4 {
@@ -45,7 +50,7 @@
     font-size: 1rem;
   }
 }.u-section-2 .u-sheet-1 {
-  min-height: 513px;
+  min-height: 514px;
 }
 
 .u-section-2 .u-line-1 {
@@ -59,7 +64,7 @@
 }
 
 .u-section-2 .u-layout-cell-1 {
-  min-height: 104px;
+  min-height: 105px;
 }
 
 .u-section-2 .u-container-layout-1 {
@@ -73,7 +78,7 @@
 }
 
 .u-section-2 .u-layout-cell-2 {
-  min-height: 104px;
+  min-height: 105px;
 }
 
 .u-section-2 .u-container-layout-2 {
@@ -81,20 +86,6 @@
 }
 
 .u-section-2 .u-text-2 {
-  margin-bottom: 0;
-  margin-top: 0;
-  font-size: 1.125rem;
-}
-
-.u-section-2 .u-layout-cell-3 {
-  min-height: 104px;
-}
-
-.u-section-2 .u-container-layout-3 {
-  padding: 30px;
-}
-
-.u-section-2 .u-text-3 {
   margin-bottom: 0;
   margin-top: 0;
   font-size: 1.125rem;
@@ -106,15 +97,15 @@
   height: 28px;
 }
 
-.u-section-2 .u-layout-cell-4 {
-  min-height: 104px;
+.u-section-2 .u-layout-cell-3 {
+  min-height: 105px;
 }
 
-.u-section-2 .u-container-layout-4 {
+.u-section-2 .u-container-layout-3 {
   padding: 30px;
 }
 
-.u-section-2 .u-text-4 {
+.u-section-2 .u-text-3 {
   margin-bottom: 0;
   margin-top: 0;
   font-size: 0.75rem;
@@ -122,41 +113,30 @@
 
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 495px;
+    min-height: 496px;
   }
 
   .u-section-2 .u-line-1 {
-    margin-top: 809px;
     margin-right: initial;
     margin-left: initial;
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 86px;
+    min-height: 87px;
   }
 
   .u-section-2 .u-layout-cell-2 {
-    min-height: 86px;
+    min-height: 87px;
   }
 
   .u-section-2 .u-layout-cell-3 {
-    min-height: 86px;
-  }
-
-  .u-section-2 .u-layout-cell-4 {
-    min-height: 86px;
+    min-height: 87px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 509px;
-  }
-
-  .u-section-2 .u-line-1 {
-    margin-top: 1237px;
-    margin-right: initial;
-    margin-left: initial;
+    min-height: 510px;
   }
 
   .u-section-2 .u-layout-cell-1 {
@@ -171,24 +151,14 @@
     min-height: 100px;
   }
 
-  .u-section-2 .u-layout-cell-4 {
-    min-height: 100px;
-  }
-
-  .u-section-2 .u-text-4 {
+  .u-section-2 .u-text-3 {
     font-size: 0.625rem;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 709px;
-  }
-
-  .u-section-2 .u-line-1 {
-    margin-top: 1138px;
-    margin-right: initial;
-    margin-left: initial;
+    min-height: 710px;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -204,29 +174,20 @@
   .u-section-2 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
-  }
-
-  .u-section-2 .u-container-layout-4 {
-    padding-left: 10px;
-    padding-right: 10px;
     padding-bottom: 0;
   }
 }
 
 @media (max-width: 575px) {
+  .u-section-2 .u-layout-cell-1 {
+    min-height: 40px;
+  }
+
   .u-section-2 .u-text-1 {
     font-size: 0.875rem;
   }
 
-  .u-section-2 .u-layout-cell-2 {
-    min-height: 40px;
-  }
-
   .u-section-2 .u-text-2 {
-    font-size: 0.875rem;
-  }
-
-  .u-section-2 .u-text-3 {
     font-size: 0.875rem;
   }
 }
