--- a/Teaching.css
+++ b/Teaching.css
@@ -1,3 +1,312 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 400px;
+  min-height: 1245px;
+}
+
+.u-section-1 .u-text-1 {
+  font-weight: 700;
+  margin: 135px auto 0 0;
+}
+
+.u-section-1 .u-layout-wrap-1 {
+  margin-top: 83px;
+  margin-bottom: 0;
+}
+
+.u-section-1 .u-layout-cell-1 {
+  min-height: 785px;
+}
+
+.u-section-1 .u-container-layout-1 {
+  padding: 30px 21px;
+}
+
+.u-section-1 .u-text-2 {
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin: 0 auto 0 0;
+}
+
+.u-section-1 .u-text-3 {
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin: 130px auto 0 0;
+}
+
+.u-section-1 .u-text-4 {
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin: 160px auto 0 0;
+}
+
+.u-section-1 .u-layout-cell-2 {
+  min-height: 731px;
+}
+
+.u-section-1 .u-container-layout-2 {
+  padding: 30px 30px 4px;
+}
+
+.u-section-1 .u-text-5 {
+  font-size: 1.125rem;
+  margin: 0;
+}
+
+.u-section-1 .u-text-6 {
+  font-size: 1.125rem;
+  margin: 15px 0 0;
+}
+
+.u-section-1 .u-text-7 {
+  font-size: 1.125rem;
+  margin: 16px 0 0;
+}
+
+.u-section-1 .u-line-1 {
+  transform-origin: left center;
+  margin-top: 84px;
+  margin-bottom: 0;
+}
+
+.u-section-1 .u-layout-wrap-2 {
+  margin-top: -1px;
+  margin-bottom: 0;
+}
+
+.u-section-1 .u-layout-cell-3 {
+  min-height: 105px;
+}
+
+.u-section-1 .u-container-layout-3 {
+  padding: 30px;
+}
+
+.u-section-1 .u-text-8 {
+  margin-bottom: 0;
+  margin-top: 0;
+  font-size: 1.125rem;
+}
+
+.u-section-1 .u-layout-cell-4 {
+  min-height: 105px;
+}
+
+.u-section-1 .u-container-layout-4 {
+  padding: 30px;
+}
+
+.u-section-1 .u-text-9 {
+  margin-bottom: 0;
+  margin-top: 0;
+  font-size: 1.125rem;
+  font-weight: 700;
+}
+
+.u-section-1 .u-icon-1 {
+  width: 24px;
+  height: 28px;
+}
+
+.u-section-1 .u-layout-cell-5 {
+  min-height: 105px;
+}
+
+.u-section-1 .u-container-layout-5 {
+  padding: 30px;
+}
+
+.u-section-1 .u-text-10 {
+  margin-bottom: 0;
+  margin-top: 0;
+  font-size: 0.75rem;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 859px;
+  }
+
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 929px;
+  }
+
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-top: 159px;
+    margin-left: 1px;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
+    margin-top: 189px;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 603px;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 87px;
+  }
+
+  .u-section-1 .u-layout-cell-4 {
+    min-height: 87px;
+  }
+
+  .u-section-1 .u-layout-cell-5 {
+    min-height: 87px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 804px;
+  }
+
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 1188px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 9px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 188px;
+    margin-right: 1px;
+    margin-left: 8px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 275px;
+    margin-left: 9px;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 100px;
+  }
+
+  .u-section-1 .u-layout-cell-4 {
+    min-height: 100px;
+  }
+
+  .u-section-1 .u-layout-cell-5 {
+    min-height: 100px;
+  }
+
+  .u-section-1 .u-text-10 {
+    font-size: 0.625rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1815px;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    margin-top: 59px;
+  }
+
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 1166px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 178px;
+    margin-right: 0;
+    margin-left: 9px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 234px;
+  }
+
+  .u-section-1 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-1 .u-text-5 {
+    font-size: 1rem;
+  }
+
+  .u-section-1 .u-text-6 {
+    font-size: 1rem;
+  }
+
+  .u-section-1 .u-text-7 {
+    font-size: 1rem;
+  }
+
+  .u-section-1 .u-line-1 {
+    margin-top: 108px;
+  }
+
+  .u-section-1 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-1 .u-container-layout-4 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-1 .u-container-layout-5 {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 0;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 1712px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-top: 143px;
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 342px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-5 {
+    font-size: 0.875rem;
+  }
+
+  .u-section-1 .u-text-6 {
+    font-size: 0.875rem;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 40px;
+  }
+
+  .u-section-1 .u-text-8 {
+    font-size: 0.875rem;
+  }
+
+  .u-section-1 .u-text-9 {
+    font-size: 0.875rem;
+  }
 }
