--- a/Research.css
+++ b/Research.css
@@ -1,5 +1,5 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 951px;
+  min-height: 1465px;
 }
 
 .u-section-1 .u-text-1 {
@@ -19,7 +19,7 @@
 
 .u-section-1 .u-text-3 {
   font-size: 1.125rem;
-  margin: 20px 0 0;
+  margin: 72px 0 0;
 }
 
 .u-section-1 .u-btn-2 {
@@ -27,17 +27,71 @@
   padding: 0;
 }
 
+.u-section-1 .u-btn-3 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-1 .u-btn-4 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-1 .u-btn-5 {
+  background-image: none;
+  padding: 0;
+}
+
 .u-section-1 .u-text-4 {
-  font-weight: 700;
-  margin: 47px auto 0 0;
+  font-size: 1.125rem;
+  margin: 72px 0 0;
+}
+
+.u-section-1 .u-btn-6 {
+  background-image: none;
+  padding: 0;
 }
 
 .u-section-1 .u-text-5 {
+  font-weight: 700;
+  margin: 77px auto 0 0;
+}
+
+.u-section-1 .u-text-6 {
   font-size: 1.125rem;
-  margin: 20px 0 60px;
+  margin: 36px 0 0;
+}
+
+.u-section-1 .u-btn-7 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-1 .u-btn-8 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-1 .u-btn-9 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-1 .u-btn-10 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-1 .u-btn-11 {
+  background-image: none;
+  padding: 0;
 }
 
 @media (max-width: 767px) {
+  .u-section-1 .u-text-1 {
+    margin-top: 60px;
+  }
+
   .u-section-1 .u-text-2 {
     font-size: 1rem;
   }
@@ -46,8 +100,13 @@
     font-size: 1rem;
   }
 
-  .u-section-1 .u-text-5 {
+  .u-section-1 .u-text-4 {
     font-size: 1rem;
+  }
+
+  .u-section-1 .u-text-6 {
+    font-size: 1rem;
+    margin-bottom: 60px;
   }
 }.u-section-2 .u-sheet-1 {
   min-height: 514px;
