--- a/Teaching.css
+++ b/Teaching.css
@@ -176,9 +176,8 @@
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 188px;
-    margin-right: 1px;
-    margin-left: 8px;
+    margin-right: 0;
+    margin-left: 9px;
   }
 
   .u-section-1 .u-text-4 {
@@ -227,8 +226,6 @@
 
   .u-section-1 .u-text-3 {
     margin-top: 178px;
-    margin-right: 0;
-    margin-left: 9px;
   }
 
   .u-section-1 .u-text-4 {
@@ -275,13 +272,21 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-layout-cell-1 {
-    min-height: 1712px;
+    min-height: 1713px;
+  }
+
+  .u-section-1 .u-container-layout-1 {
+    padding-left: 7px;
+    padding-right: 7px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 12px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 143px;
-    margin-left: 1px;
-    margin-right: 1px;
+    margin-top: 172px;
+    margin-left: 7px;
   }
 
   .u-section-1 .u-text-4 {
@@ -295,6 +300,10 @@
   }
 
   .u-section-1 .u-text-6 {
+    font-size: 0.875rem;
+  }
+
+  .u-section-1 .u-text-7 {
     font-size: 0.875rem;
   }
 
